horizontal scroll height fix

--- a/src/css/_theme.scss
+++ b/src/css/_theme.scss
@@ -188,6 +188,7 @@ mat-form-field {
 
 ::-webkit-scrollbar {
   width: 0.4em;
+  height: 0.3em;
 }
 
 ::-webkit-scrollbar-track {
